Avoid the horizontal scrollbar

--- a/deps/basiccontext/styles/_context.scss
+++ b/deps/basiccontext/styles/_context.scss
@@ -41,6 +41,7 @@
 	&--scrollable {
 		height: 100%;
 		-webkit-overflow-scrolling: touch;
+		overflow-x: hidden;
 		overflow-y: auto;
 	}
 
